# ganymede

./: .gitignore  .gitmodules  LICENSE  README.md  build.ps1  build_package.ps1  build_package.sh  ganymede.code-workspace  setup.py
auxml.export.proj/: CMakeLists.txt
draft.proj/: draft_coco.py  draft_darknet_implementation.py  draft_dataset_aggregator.py  draft_jpeg_augmentation.py  draft_linear_downsize_augmentation.py  draft_math.py  draft_mean_variance_change.py  draft_onnxruntime_providers.py  draft_yolo_onnxruntime.py
draft.proj/dependencies/: __init__.py
examples.proj/: example_augmentation.py  example_dataset.py
ganymede.proj/ganymede/: argument.py  file.py  filesystem.py  json.py  random.py
ganymede.proj/ganymede/augmentation/: auxiliary.py  selector.py
ganymede.proj/ganymede/core/: __init__.py  arithmetic.py  compare.py  search.py  sort.py  type_aux.py
ganymede.proj/ganymede/dataset/: __init__.py  batch_sampler.py  dataset_aggregator.py  i_dataset_loader.py
ganymede.proj/ganymede/debug/: __init__.py  image_info_funcs.py
ganymede.proj/ganymede/imaging/: __init__.py  auxiliary.py  image_size.py  image_type.py  io.py  numpy_image_handler.py  processing.py  visualisation.py
ganymede.proj/ganymede/math/: alg_tuple2.py  alg_tuple3.py  auxiliary.py  bbox2.py  convert.py  functions.py  line2.py  line3.py  point2.py  point3.py  poly2.py  primitives.py  relation.py  system_coord_transformer.py  vec2.py  (+1 more)
resources/images/: tank_data.json
src/ganymede/: argument.py  draw.py  filesystem.py  json.py  random.py
utils.proj/: export_darknet2onnx.py
(+353 files in other folders)
